Fix ListModel::set() to update the model cache when setting a list value

Task-number: QTBUG-15190