tests/auto/declarative/qdeclarativelistmodel/tst_qdeclarativelistmodel.cpp
@@ -100,6 +100,7 @@ private slots:
     void get_nested();
     void get_nested_data();
     void crash_model_with_multiple_roles();
+    void set_model_cache();
 };
 int tst_qdeclarativelistmodel::roleFromName(const QDeclarativeListModel *model, const QString &roleName)
 {
@@ -926,6 +927,17 @@ void tst_qdeclarativelistmodel::crash_model_with_multiple_roles()
 
     // used to cause a crash in QDeclarativeVisualDataModel
     model->setProperty(0, "black", true);
+}
+
+//QTBUG-15190
+void tst_qdeclarativelistmodel::set_model_cache()
+{
+    QDeclarativeEngine eng;
+    QDeclarativeComponent component(&eng, QUrl::fromLocalFile(SRCDIR "/data/setmodelcachelist.qml"));
+    QObject *model = component.create();
+    QVERIFY2(component.errorString().isEmpty(), QTest::toString(component.errorString()));
+    QVERIFY(model != 0);
+    QVERIFY(model->property("ok").toBool());
 }
 
 QTEST_MAIN(tst_qdeclarativelistmodel)
